--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,84 +1,107 @@
 version: '3.8'
 
 services:
+  # SQL Server 2022 Database
   db:
     image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: timesheet_db
+    container_name: familyhub-timesheet-sqlserver
     environment:
       - ACCEPT_EULA=Y
       - SA_PASSWORD=YourStrong!Passw0rd
-      - MSSQL_PID=Express
+      - MSSQL_PID=Developer
+      - MSSQL_COLLATION=SQL_Latin1_General_CP1_CI_AS
     ports:
       - "1433:1433"
     volumes:
       - sqlserver_data:/var/opt/mssql
-    networks:
-      - timesheet_network
-    restart: unless-stopped
+      - ./db_init:/docker-entrypoint-initdb.d:ro
     healthcheck:
-      test: ["CMD-SHELL", "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P YourStrong!Passw0rd -Q 'SELECT 1' || exit 1"]
+      test: ["CMD-SHELL", "/opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P YourStrong!Passw0rd -C -Q 'SELECT 1' || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
-      start_period: 30s
+      start_period: 60s
+    restart: unless-stopped
+    networks:
+      - familyhub-network
 
+  # Django Application
   web:
     build: .
-    container_name: timesheet_web
-    command: >
-      sh -c "python manage.py migrate --settings=familyhub_timesheet.settings.production &&
-             python manage.py collectstatic --noinput --settings=familyhub_timesheet.settings.production &&
-             gunicorn --bind 0.0.0.0:8000 --workers 3 --timeout 120 familyhub_timesheet.wsgi:application"
-    volumes:
-      - .:/app
-      - static_files:/app/staticfiles
-      - media_files:/app/mediafiles
+    container_name: familyhub-timesheet-web
     ports:
       - "8080:8000"
     environment:
-      - DEBUG=False
-      - SECRET_KEY=${SECRET_KEY}
-      - DATABASE_PASSWORD=YourStrong!Passw0rd
-      - ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
+      - DJANGO_SETTINGS_MODULE=familyhub_timesheet.settings.production
       - DATABASE_HOST=db
       - DATABASE_PORT=1433
       - DATABASE_NAME=timesheet_prod
+      - DATABASE_USER=sa
+      - DATABASE_PASSWORD=YourStrong!Passw0rd
+      - SECRET_KEY=your-secret-key-here-change-in-production
+      - DEBUG=False
+      - ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0,*
+      - ENABLE_DATABASE_FALLBACK=true
+    volumes:
+      - static_volume:/app/staticfiles
+      - media_volume:/app/mediafiles
+      - logs_volume:/app/logs
+      - data_volume:/app/data
     depends_on:
       db:
         condition: service_healthy
-    networks:
-      - timesheet_network
-    restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/"]
+      test: ["CMD", "python", "/app/test_db_connection.py", "--health-check"]
       interval: 30s
       timeout: 10s
-      retries: 5
-      start_period: 30s
-
-  nginx:
-    image: nginx:alpine
-    container_name: timesheet_nginx
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - static_files:/app/staticfiles:ro
-      - media_files:/app/mediafiles:ro
-    depends_on:
-      - web
-    networks:
-      - timesheet_network
+      retries: 3
+      start_period: 40s
     restart: unless-stopped
+    networks:
+      - familyhub-network
+    # Enhanced startup sequence with database connection testing
+    command: >
+      bash -c "
+        echo 'FamilyHub Timesheet Starting...' &&
+        echo 'Step 1: Testing basic connectivity...' &&
+        python /app/test_db_connection.py --network-only &&
+        echo 'Step 2: Waiting for SQL Server to be ready...' &&
+        python /app/test_db_connection.py --wait &&
+        echo 'Step 3: Testing Django database connection...' &&
+        python manage.py wait_for_database --timeout=120 &&
+        echo 'Step 4: Running database migrations...' &&
+        python manage.py migrate --noinput &&
+        echo 'Step 5: Testing database operations...' &&
+        python manage.py test_database_connection --create-test-table &&
+        echo 'Step 6: Collecting static files...' &&
+        python manage.py collectstatic --noinput --clear &&
+        echo 'Step 7: Skipping superuser creation for now...' &&
+        echo 'Step 8: Starting Gunicorn server...' &&
+        echo 'Application will be available at http://localhost:8080' &&
+        gunicorn familyhub_timesheet.wsgi:application \\
+          --bind 0.0.0.0:8000 \\
+          --workers 3 \\
+          --timeout 30 \\
+          --keep-alive 2 \\
+          --max-requests 1000 \\
+          --max-requests-jitter 100 \\
+          --access-logfile /app/logs/access.log \\
+          --error-logfile /app/logs/error.log \\
+          --log-level info
+      "
 
 volumes:
   sqlserver_data:
     driver: local
-  static_files:
+  static_volume:
     driver: local
-  media_files:
+  media_volume:
+    driver: local
+  logs_volume:
+    driver: local
+  data_volume:
     driver: local
 
 networks:
-  timesheet_network:
+  familyhub-network:
     driver: bridge
